<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_title_events">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_view_events"
                    android:icon="@drawable/ic_calendar_view"
                    android:title="@string/nav_title_view_events" />
                <item
                    android:id="@+id/nav_add_event"
                    android:icon="@drawable/ic_calendar_add"
                    android:title="@string/nav_title_add_event" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_title_account">
        <menu>
            <group android:id="@+id/nav_group_logged_out">
                <item
                    android:id="@+id/nav_log_in"
                    android:icon="@drawable/ic_login"
                    android:title="@string/nav_title_log_in" />
            </group>
            <group
                android:id="@+id/nav_group_logged_in"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_title_log_out" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/nav_title_settings" />
            </group>
        </menu>
    </item>
</menu>
