<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_likes"
        android:orderInCategory="10"
        android:title="@string/action_schedule"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_dislikes"
        android:orderInCategory="20"
        android:title="@string/action_removed"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always" />

</menu>
