<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_event_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zpiao1.excited.views.EventDetailActivity"
    tools:showIn="@layout/app_bar_event_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_event_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@mipmap/free_yoga_and_tea_session_with_dr_trish_corley" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            tools:text="Free Yoga &amp; Tea Session with Dr. Trish Corley" />

        <TextView
            android:id="@+id/detail_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            tools:text="Sports" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/date"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                tools:text="Thursday, September 15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/venue"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                tools:text="yoga in common, 10 Petain Rd, Singapore 208089" />
        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_directions_car_black" />

            <TextView
                android:id="@+id/detail_driving_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_not_available"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_directions_transit_black" />

            <TextView
                android:id="@+id/detail_transit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_not_available"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
